x values were strings instead of ints.

* Fixed bug where edit_bug.aspx crashed if it was trying to display a
bug with its project value set to a non-existent project.  That can 
happend if the bug is posted via the screen capture utility.

* No longer displaying "diff" link on subversion revisions that where
the action is "A", add.

Enhancements:

* Added status column to relationships.aspx


-----------------------------------------------------------------------
Version 2.8.4  4/8/2008
-----------------------------------------------------------------------

To migrate to this release from 2.8.3, run this SQL:

update custom_col_metadata set 
ccm_dropdown_type = '' where ccm_dropdown_type = 'not a dropdown'

* Fixed bug introduced in version 2.8.3.  If you used version 2.8.3 to
add a custom field that was not a dropdown, you need this fix.

Also fixed:

* Non-dropdown custom columns whose size was big enough to be displayed
as textareas were wrongly being displayed as textareas.

* Screen label for change_password.aspx was wrong.  Should read "New
Password", not "Email".

* If you have two browswer windows open, clicking on flags could
trigger flags.aspx to report a duplicate insert error.   The error is
harmless, but annoying, so now suppressing it.

-----------------------------------------------------------------------
Version 2.8.3  4/5/2008
-----------------------------------------------------------------------

Small bug fixes:

* If you were inactive awhile and then clicked on logoff, you could get 
an error.

* When adding a non-dropdown custom field and checking required, the 
following error was wrongly being displayed:
Checking "Required" is not compatible with a normal or users dropdown

* Corrected the autocomplete behavior for confirm password in 
edit_user.aspx autocomplete=off

Enhancments:

* Queries.aspx now gives admins the ability to see everybody's 
private queries.

* btnet_service.exe now works even if the SSL certificate is untrusted.
